--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -81,5 +81,15 @@
 }
 
 .tableDayPlanning {
-    @apply w-[22rem] sm:w-[30rem] sm:m-4 shadow-xl dark:bg-slate-900 cursor-pointer dark:focus:bg-slate-600
+    @apply w-[22rem] sm:w-[30rem] sm:m-4 shadow-xl dark:bg-slate-900  dark:focus:bg-slate-600
+}
+
+/* Components for templates/planning/comparative.planning.html.twig */
+
+.tableCompPlanning {
+    @apply w-[40rem] sm:m-4 shadow-xl dark:bg-slate-900  dark:focus:bg-slate-600
+}
+
+.tbodyCompPlanning {
+    @apply bg-slate-100 dark:bg-slate-900
 }
