--- a/templates/planning/edit.html.twig
+++ b/templates/planning/edit.html.twig
@@ -12,52 +12,50 @@
     <div class="w-[75rem]">
         <!-- Title (accueil) -->
         <div class="pl-10 sm:pl-24 py-14 pt-24">
-            <p class="text-4xl">Editer planning</p>   
+            <p class="text-4xl">Edition du planning</p>   
         </div>
 
         <!-- Start TABLE -->    
 
 {{ form_start(planning) }}
 <div class="mx-auto">  
-            <div class="grid sm:grid-cols-1 xl:grid-cols-2"> 
-    <table class="w-[22rem] sm:w-[30rem] sm:m-4 shadow-xl dark:bg-slate-900 ">
-                    <tbody >
-                        <tr class="hover:bg-grey-lighter">
-                        <td class="py-4 px-6 border-b border-grey-light">Début de journée</td>
-                        <td class="py-4 px-6 text-left border-b border-grey-light text-black">
-                            {{ form_widget(planning.startshift) }} 
-                        </td>
-                        </tr>
-                        <tr class="hover:bg-grey-lighter">
-                        <td class="py-4 px-6 border-b border-grey-light">Début de pause repas</td>
-                        <td class="py-4 px-6 text-left border-b border-grey-light text-black">
-                            {{ form_widget(planning.startlunch) }}
-                        </td>
-                        </tr>
-                        <tr class="hover:bg-grey-lighter">
-                        <td class="py-4 px-6 border-b border-grey-light">Fin de pause repas</td>
-                        <td class="py-4 px-6 text-left border-b border-grey-light text-black">
-                            {{ form_widget(planning.endlunch) }}
-                        </td>
-                        </tr>
-                        <tr class="hover:bg-grey-lighter">
-                        <td class="py-4 px-6 border-b border-grey-light">Fin de journée</td>
-                        <td class="py-4 px-6 text-left border-b border-grey-light text-black">
-                            {{ form_widget(planning.endshift) }}
-                        </td>
-                        </tr>
-                    </tbody>
-                </table>
-                </div>
-        </div>
-            <div class="w-[75rem] mb-10">
-        <!-- buttons save et back-->
-                <div class="m-20">
-                    <button class="block max-w-fit text-white bg-blue-600 font-semibold rounded-lg hover:bg-blue-900 hover:text-white focus:outline-none p-3 my-10 focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900 focus:text-white">{{ button_label|default('Sauvegarder') }}</button>
-                    {{ form_end(planning) }}
-                    <a class="block max-w-fit text-white bg-blue-600 font-semibold rounded-lg hover:bg-blue-900 hover:text-white focus:outline-none p-3 my-10 focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900 focus:text-white" href="{{ path('planned_departement') }}">retour à la liste</a>
-                </div>
-            </div>
+    <table class="sm:m-4 shadow-xl bg-slate-100 dark:bg-slate-900 ">
+        <tbody >
+            <tr>
+                <td class="py-4 px-6 border-b border-grey-light">Début de journée</td>
+                <td class="py-4 px-6 text-left border-b border-grey-light text-black">
+                    {{ form_widget(planning.startshift) }} 
+                </td>
+            </tr>
+            <tr>
+                <td class="py-4 px-6 border-b border-grey-light">Début de pause repas</td>
+                <td class="py-4 px-6 text-left border-b border-grey-light text-black">
+                    {{ form_widget(planning.startlunch) }}
+                </td>
+            </tr>
+            <tr>
+                <td class="py-4 px-6 border-b border-grey-light">Fin de pause repas</td>
+                <td class="py-4 px-6 text-left border-b border-grey-light text-black">
+                    {{ form_widget(planning.endlunch) }}
+                </td>
+            </tr>
+            <tr>
+                <td class="py-4 px-6 ">Fin de journée</td>
+                <td class="py-4 px-6 text-left  text-black">
+                    {{ form_widget(planning.endshift) }}
+                </td>
+            </tr>
+        </tbody>
+    </table>    
+</div>
+
+<!-- buttons save et back-->
+    <div class="m-4 mt-8">
+        <a href="{{ path('planned_departement')}}" class="text-white text-xl hover:bg-blue-800 font-semibold rounded-lg bg-blue-600 hover:text-white focus:outline-none focus:shadow-outline focus:bg-gray-100 hover:shadow-xs p-3 my-4 focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900 focus:text-white mr-10">{{ button_label|default('Sauvegarder') }}</a>
+        <a href="{{ path('planned_departement') }}" class="text-white text-xl hover:bg-blue-800 font-semibold rounded-lg bg-blue-600 hover:text-white focus:outline-none focus:shadow-outline focus:bg-gray-100 hover:shadow-xs p-3 my-4 focus:bg-gradient-to-tl from-green-400 via-sky-600 to-indigo-900 focus:text-white">Retour</a>
+    </div>
+
+</div>
 </div>
 <!-- End of the new integration -->
 {% endblock %}
